# clines

./: .gitignore  AUTHORS  ChangeLog  GNUmakefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  clines-config.h.in  clines-man.xml  clines.6  configure  configure.ac
data/: version1
src/: board.c  gameplay.c  main.c  render.c
src/include/clines/: board.h  main.h  play.h  render.h  sysi.h
